[gd_scene load_steps=4 format=3 uid="uid://b1uw63ghnuvvl"]

[ext_resource type="Script" path="res://entities/player/camera/camera_script.gd" id="1_b7rdu"]
[ext_resource type="Theme" uid="uid://co0nx0i0flpw4" path="res://scenes/src/themes/main_theme.tres" id="2_alp62"]
[ext_resource type="Script" path="res://entities/player/camera/panel_script.gd" id="3_ujrdw"]

[node name="Camera" type="Camera2D"]
zoom = Vector2(1.25, 1.25)
position_smoothing_speed = 1.0
script = ExtResource("1_b7rdu")

[node name="GUI" type="Control" parent="."]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_left = -416.0
offset_top = -224.0
offset_right = 416.0
offset_bottom = 224.0
pivot_offset = Vector2(416, 224)
theme = ExtResource("2_alp62")

[node name="Reichsmarks" type="Label" parent="GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 248.0
offset_bottom = -10.0
grow_vertical = 0
text = "Reichsmarks: 0"

[node name="Weapon" type="VBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -56.0
offset_right = -19.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0

[node name="Name" type="Label" parent="GUI/Weapon"]
layout_mode = 2
text = "WEAPONNAME"
horizontal_alignment = 2

[node name="Ammunition" type="Label" parent="GUI/Weapon"]
layout_mode = 2
text = "8 / 40"
horizontal_alignment = 2

[node name="Time" type="VBoxContainer" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Title" type="Label" parent="GUI/Time"]
layout_mode = 2
text = "Time to rescue ?"

[node name="Numbers" type="Label" parent="GUI/Time"]
layout_mode = 2
text = "30:00"
horizontal_alignment = 1

[node name="Message" type="Label" parent="GUI"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -10.0
offset_right = 96.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Reloading" type="Label" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "Reloading..."

[node name="HealthBar" type="ProgressBar" parent="GUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="Menu" type="Panel" parent="."]
process_mode = 3
visible = false
z_index = 100
z_as_relative = false
offset_left = -416.0
offset_top = -224.0
offset_right = 416.0
offset_bottom = 224.0
theme = ExtResource("2_alp62")
script = ExtResource("3_ujrdw")

[node name="MapName" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 9.0
offset_right = 41.0
offset_bottom = 32.0
grow_horizontal = 2
text = "MAPNAME"

[node name="Options" type="Panel" parent="Menu"]
layout_mode = 2
offset_left = 24.0
offset_top = 24.0
offset_right = 232.0
offset_bottom = 424.0

[node name="Container" type="VBoxContainer" parent="Menu/Options"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 360.0

[node name="Return" type="Button" parent="Menu/Options/Container"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.94902, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.94902, 0, 0, 1)
text = "Return"
flat = true

[node name="Escape" type="Button" parent="Menu/Options"]
layout_mode = 2
offset_left = 8.0
offset_top = 363.0
offset_right = 200.0
offset_bottom = 392.0
theme_override_colors/font_hover_pressed_color = Color(0.94902, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.94902, 0, 0, 1)
theme_override_colors/font_color = Color(0.533333, 0, 0, 1)
text = "Escape"
flat = true

[connection signal="pressed" from="Menu/Options/Container/Return" to="Menu" method="_on_return_pressed"]
[connection signal="pressed" from="Menu/Options/Escape" to="Menu" method="_on_escape_pressed"]
